<resources>
    <string name="app_name">Event Countdown</string>
    <string name="action_sort">Сортировка</string>
    <string name="action_sortacs">Сперва ближайшие</string>
    <string name="action_sortdesc">Сперва более поздние</string>
    <string name="action_sortoff">Не сортировать</string>
    <string name="action_arc">Архив</string>
    <string name="action_format">Формат вывода</string>
    <string name="action_format_dmy">Дни, месяцы, годы</string>
    <string name="action_format_ymd">Годы, месяцы, дни</string>

    <string name="action_about">О программе</string>
    <string name="action_clear_arc">Очистить архив</string>
    <string name="action_feedback">Обратная связь</string>

    <string name="newevent_text_label">Редактирование</string>
    <string name="newevent_text_title">Заголовок:</string>
    <string name="newevent_text_description">Описание:</string>
    <string name="newevent_button_delete">Удалить</string>
    <string name="newevent_text_selectfromcal">Выбрать в календаре</string>
    <string name="newevent_text_foroldevents">Это событие уже произошло %1$s</string>
    <string name="all_button_save">Сохранить</string>
    <string name="all_label_newevent">Новое событие</string>
    <string name="all_label_about">О программе</string>
    <string name="notify_text_today">Сегодня %1$s:</string>
    <string name="all_text_today">Сегодня</string>
    <string name="main_text_welcome">Пока ничего не добавлено&#8230;</string>

    <string name="about_text_about">Event Countdown - бесплатное приложение для того, чтобы знать, сколько осталось до важного события.
        Без рекламы и с открытым исходным кодом.
        Не требует доступа к контактам/интернету/файлам в телефоне.
        Страница автора: https://github.com/va-utils

    </string>

    <string name="about_version">Версия: %1$s</string>
    <string name="widget_config_text_opacity">Непрозрачность</string>
    <string name="widget_config_text_textsize">Размер надписей</string>
    <string name="widget_config_text_preview">Текст виджета</string>
    <string name="widget_config_button_selectcolor">Выбрать цвет</string>
    <string name="widget_config_text_selectedevent">Выбрано событие: %1$s</string>
    <string name="widget_config_menu_default">По умолчанию</string>
    <string name="appwidget_error">Загрузка&#8230;</string>
    <string name="widget_config_configure">Какое событие отображать?</string>
    <string name="widget_config_add">Добавить виджет</string>
    <string name="widget_config_update">Обновить</string>

    <string name="arc_text_welcome">Здесь будут отображаться прошедшие события</string>
    <string name="arc_text_empty">Нет событий для удаления</string>
    <string name="arc_text_result">Удалено старых событий: %1$d</string>
    <string name="all_remained">Осталось: %1$s%2$s%3$s</string>
    <string name="all_passed">Прошло: %1$s%2$s%3$s</string>


</resources>
